--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -2,55 +2,42 @@
 <h1>Books</h1>
 </header>
 
-<main>
-  
-  <div class= "title">
-    <p>Title</p>
-  </div>
-  
-  <div class= "body">
-    <p>Body</p>
-  </div>
-  
-</main>
+<table>
 
+<tr>
+  
+  <th>Title</th>
+  <th>Body</th>
+  
+</tr>
 
 <% @books.each do |book| %>
 
+<tr>
+<td><%= book.title %></td>
+<td><%= book.body %></td>
+<td><%= link_to 'Show', book_path(book.id) %></td>
+<td><%= link_to 'Edit', edit_book_path(book.id) %></td>
+<td><%= link_to 'Destroy', book_path(book.id), method: :delete, "data-confirm" => "Are you sure ?" %></td>
+</tr>
 
 
-<div class= "content">
-  
-  <div class="content_title">
-    <th>
-    <%= book.title %>
-    </th>
-  </div>
-    
-   <div class="content_body">
-    <th>
-    <%= book.body %>
-    </th>
-   </div>
-   
-   
-   <div class= "show">
-     <%= link_to 'Show', book_path(book.id) %>
-   </div>
-   
-   <div class= "edit">
-     <%= link_to 'Edit', edit_book_path(book.id) %>
-   </div>
-   
-   <div class= "destroy">
-     <%= link_to 'Destroy', book_path(book.id), method: :delete, "data-confirm" => "Are you sure ?" %>
-   </div>
-       
-</div>
- 
 <% end %>
 
+
+</table>
+
 <h1>New book</h1>
+
+<% if @book.errors.any? %>
+<%= @book.errors.count %>errors prohibited this book from being saved:
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+  
+<% end %>
 
 <%= form_with model:@book, url:'/books', method: :post do |f| %>
 
