--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -28,6 +28,6 @@
    </div>
     
  <div class= "back">
-   <%= link_to 'Back', books_path(@book.id) %>
+   <%= link_to 'Back', books_path %>
  </div>
 </main>
